<resources>
    <string name="app_name">WifEye</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="drawer_overview">Overview</string>
    <string name="drawer_hotspots">Hotspots</string>
    <string name="drawer_schedule">Schedule</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_events">Events</string>
    <string name="drawer_about">About</string>
</resources>
