<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/top" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_summary"
            android:icon="@drawable/summary"
            android:title="@string/drawer_summary" />
        <item
            android:id="@+id/nav_hotspots"
            android:icon="@drawable/hotspots"
            android:title="@string/drawer_hotspots" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/timer"
            android:title="@string/drawer_schedule" />
    </group>

    <group android:id="@+id/mid" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/drawer_settings" />
    </group>

    <group android:id="@+id/bot" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/events"
            android:title="@string/drawer_events" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info"
            android:title="@string/drawer_about" />
    </group>

</menu>
